appId: com.tetherapp.wdkwallet
---
- launchApp
- assertVisible: "Create wallet"
- tapOn: "12 words"
- tapOn: "Create Wallet"
- assertVisible:
    text: "Wallet locked|Portfolio"
